--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.12",
-    "@angular/common": "^16.2.12",
-    "@angular/compiler": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/forms": "^16.2.12",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/router": "^16.2.12",
+    "@angular/animations": "18.2.12",
+    "@angular/common": "18.2.12",
+    "@angular/compiler": "18.2.12",
+    "@angular/core": "18.2.12",
+    "@angular/forms": "18.2.12",
+    "@angular/platform-browser": "18.2.12",
+    "@angular/platform-browser-dynamic": "18.2.12",
+    "@angular/router": "18.2.12",
     "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
-    "rxjs": "^7.8.2",
-    "typescript": "5.1",
-    "zone.js": "^0.13.3"
+    "rxjs": "7.8.1",
+    "zone.js": "0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.16",
-    "@angular/cli": "^18.2.20",
-    "@angular/compiler-cli": "^16.2.12",
+    "@angular/cli": "18.2.20",
+    "@angular/compiler-cli": "18.2.12",
+    "@angular-devkit/build-angular": "18.2.7",
     "@types/jasmine": "^5.1.9",
-    "@types/jwt-decode": "^2.2.1"
+    "@types/jwt-decode": "^2.2.1",
+    "typescript": "5.4.5"
   }
 }
